added update hangout endpoint
